summative.moria.Moria.scala.error
Compilation error:
Moria:24: error: not found: value Direction
  while(getDirection() != Direction.EST){
                          ^